chore: Update deprecated packages to newer versions
- Replace @supabase/auth-helpers-nextjs with @supabase/ssr
- Update ESLint to latest version (9.37.0)
- Update eslint-config-next to latest version
- Remove deprecated packages to reduce build warnings
- Build now runs with minimal deprecation warnings

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "autoprefixer": "^10.0.1",
     "axios": "^1.12.2",
@@ -30,8 +30,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "typescript": "^5"
   }
 }
